# matchbox

./: .pre-commit-config.yaml  Pipfile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: automerge.yml  benchmarks.yml  build.yml  pr-check.yml  pre-commit.yml  pypi.yml  release.yml  sphinx-docs.yml  tests.yml
benchmarks/: data.js  test_matchbox_add.py  test_matchbox_match.py
docs/: .buildinfo  api.html  authors.html  changelog.html  contributing.html  genindex.html  glossary.html  index.html  py-modindex.html  rationale.html  search.html  searchindex.js  usage.html
docs/.doctrees/: changelog.doctree  environment.pickle  index.doctree
matchbox/: __init__.py  box.py  index.py
newsfragments/: +0e693d39.misc.rst  +36dceb1c.misc.rst  +84857445.misc.rst  +8bc96b1f.misc.rst  +946f403d.misc.rst  +95cd6308.misc.rst  +ad9553be.misc.rst  +benchmark-comment.misc.rst  +c588d598.misc.rst  +d5d7239c.misc.rst  784.misc.rst
tests/: __init__.py
