[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.11" ]

[project]
name = "matchbox"
version = "1.3.0"
description = "Abstraction layer for creating hash maps to speed up extracting subsets out of objects in collection"
readme = "README.rst"
keywords = [ "hashmap", "index", "match", "set" ]
license = "LGPL-3.0-or-later"
license-files = [ "LICENSE" ]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[[project.authors]]
name = "Grzegorz Śliwiński"
email = "fizyk+pypi@fizyk.dev"

[project.urls]
Source = "https://github.com/fizyk/matchbox"
"Bug Tracker" = "https://github.com/fizyk/matchbox/issues"
Changelog = "https://github.com/fizyk/matchbox/blob/v1.3.0/CHANGES.rst"
Documentation = "http://fizyk.github.io/matchbox/"

[dependency-groups]
dev = [
    "mypy==2.1.0; implementation_name=='cpython'",
    "pytest==9.1.1",
    "pytest-benchmark==5.2.3",
    "pytest-cov==7.1.0",
    "sphinx==9.1.0; python_version>='3.12'",
    "tbump==6.11.0",
    "towncrier==25.8.0",
]

[tool.uv.build-backend]
module-name = "matchbox"
module-root = ""
source-include = [ "CHANGES.rst" ]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "D",   # pydocstyle
    "RUF", # Ruff specific
]

[tool.pyproject-fmt]
column_width = 120
indent = 4
keep_full_version = true
generate_python_version_classifiers = false
table_format = "long"
sub_table_spacing = "\n"

[tool.pytest]
filterwarnings = [ "error" ]
strict_xfail = true

[tool.tbump]
[[tool.tbump.before_commit]]
name = "Build changelog"
cmd = "uv run towncrier build --version {new_version} --yes"

[[tool.tbump.field]]
# the name of the field
name = "extra"
# the default value to use, if there is no match
default = ""

[[tool.tbump.file]]
src = "matchbox/__init__.py"

[[tool.tbump.file]]
src = "docs/source/conf.py"

[[tool.tbump.file]]
src = "pyproject.toml"
search = 'version = "{current_version}"'

[[tool.tbump.file]]
src = "pyproject.toml"
search = 'Changelog = "https://github.com/fizyk/matchbox/blob/v{current_version}/CHANGES.rst"'

[tool.tbump.git]
message_template = "Release {new_version}"
tag_template = "v{new_version}"

[tool.tbump.version]
current = "1.3.0"
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  (\-
    (?P<extra>.+)
  )?
  '''

[tool.towncrier]
directory = "newsfragments"
filename = "CHANGES.rst"
issue_format = "`#{issue} <https://github.com/fizyk/matchbox/issues/{issue}>`_"
single_file = true

[[tool.towncrier.type]]
directory = "break"
name = "Breaking changes"
showcontent = true

[[tool.towncrier.type]]
directory = "depr"
name = "Deprecations"
showcontent = true

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bugfixes"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Miscellaneous"
showcontent = false
